--- a/article/films-series/lucifer/index.html
+++ b/article/films-series/lucifer/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="content">
         <h1>lucifer</h1>
-        <h2>lucifer est une série disponible sur netflix ou bien sur <a href="https://filmstreaming.eu"></a></h2>
+        <h2>lucifer est une série disponible sur netflix ou bien sur <a href="https://filmstreaming.eu">filmstreaming.eu</a>, elle met en scène la vie de lucifer mornigstar, propriétaire d'un night club et diable à ses heures perdues.
+        il rencontre Chloé Decker, lieautenant de la criminelle et est amené à collaborer avec elle. la série dure 6 saisons, la saison 6 closant définitivement la série</h2>
     </div>
     <script src="https://use.fontawesome.com/e0853b1132.js"></script>
     <script>
