--- a/article/films-series/index.html
+++ b/article/films-series/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://127.0.0.1:5500/ressources/css/style.css">
 </head>
 <body>
-    <div class="content"><h1>no longer display</h1></div>
+    <div class="content"><h1></h1></div>
     
     <script src="https://use.fontawesome.com/e0853b1132.js"></script>
     <script>
